# execseal

./: .gitignore  Cargo.toml  README.md  dummy.c  justfile  protectme.c
.github/workflows/: build.yml
execseal/: Cargo.toml  build.rs
execseal-common/: Cargo.toml
execseal-common/src/: lib.rs
execseal-runtime/: Cargo.toml
execseal-runtime/src/: main.rs
execseal/src/: main.rs
src/: lib.rs  main.rs
